--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,4 +10,6 @@ postfix_relayhost_pass: false
 postfix_myhostname: "{{ inventory_hostname }}"
 postfix_mydomain: "{{ inventory_hostname }}"
 postfix_mydestination: "$myhostname, localhost.$mydomain, localhost, $mydomain"
+postfix_mynetworks: ''
 postfix_message_size_limit: 10485760
+postfix_use_smtp_auth: true
