--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -5,4 +5,6 @@ postfix_config_dir: '/etc/postfix'
 postfix_service: 'postfix'
 postfix_packages:
   - 'ca-certificates'
+  - 'dovecot'
   - 'postfix'
+dovecot_config_dir: '/etc/dovecot'
