--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
     - postfix
 
 - name: Install packages for RedHat derivatives
-  yum: pkg={{ item }} state=present 
+  yum: name={{ item }} state=present 
   with_items: postfix_packages
   when: ansible_os_family == 'RedHat'
   tags:
@@ -69,3 +69,4 @@
   tags:
     - common
     - postfix
+
