--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,17 +1,16 @@
 ---
+dependencies: []
+
 galaxy_info:
   author: genzouw
-  description: 
-  Some suggested licenses:
-    - MIT
-  license: license (GPLv2, CC-BY, etc)
-  min_ansible_version: 1.2
+  description: 'Scrit to setup postfix.'
+  license: "license (BSD, MIT)"
+  min_ansible_version: 1.6
   platforms:
-    - name: EL
-      versions:
-        - all
+  - name: EL
+    versions:
+    - all
   categories:
     - networking
     - system
     - web
-dependencies: []
